fit 500 hidden by turbo + fix add-file JS controller

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -93,6 +93,17 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 10px;
   }
+
+  .doc-name-align{
+    display: flex;
+    align-items: center;
+  }
+
+  .file-name{
+    margin-left: 8px;
+    font-size: 10px;
+    text-overflow: ellipsis;
+  }
 }
 
 @media (max-width: 900px) {
